--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,94 @@
 
         </section>
 
+        <section class="price">
+            <div class="container">
+                <h2 class="section-title price__title">Máme velmi flexibilní systém slev <br> pro komplexní práce!                    
+                    </h2>
+                <span class="section-subtitle price__subtitle">Ceny za naše služby</span>
+                <div class="cards">
+                    <div class="card price__card">
+                        <div class="card__image">
+                            <img src="img/price_1.jpg" alt="koupelna">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">
+                                Rekonstrukce koupelen a toalet
+                            </h4>
+                            <a href="#" class="card__link">
+                                Zjistit ceny
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card price__card ">
+                        <div class="card__image">
+                            <img src="img/price_2.jpg" alt="pokojů">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">
+                                Rekonstrukce pokojů a apartmánů
+                            </h4>
+                            <a href="#" class="card__link">
+                                Zjistit ceny
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__image">
+                            <img src="img/price_3.jpg" alt="kancelářských">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">
+                                Výzdoba kancelářských prostorů
+                            </h4>
+                            <a href="#" class="card__link">
+                                Zjistit ceny
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__image">
+                            <img src="img/price_4.jpg" alt="Rekonstrukce">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">
+                                Rekonstrukce v nových budovách
+                            </h4>
+                            <a href="#" class="card__link">
+                                Zjistit ceny
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__image">
+                            <img src="img/price_5.jpg" alt="kuchyní">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">
+                                Renovace kuchyní
+                            </h4>
+                            <a href="#" class="card__link">
+                                Zjistit ceny
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card price__card">
+                        <div class="card__image">
+                            <img src="img/price_6.jpg" alt="Opravy">
+                        </div>
+                        <div class="card__text">
+                            <h4 class="card__title">
+                                Opravy chat a chalup
+                            </h4>
+                            <a href="#" class="card__link">
+                                Zjistit ceny
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
       <div class="modal" id="modal">
         <div class="modal-dialog">
