sekce benefits,documents

--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,8 @@
                 </div>
             </div>
         </section>
-
+       
+       <section>
         <div class="notice">
             <div class="container">
                 <h2 class="notice__text wow animate__animated animate__heartBeat">
@@ -261,6 +262,58 @@
                 </h2>
             </div>
         </div>
+
+       </section>
+       <section class="info">
+        <div class="container">
+          <div class="benefits info__block">
+            <div class="benefit wow animate__animated animate__fadeInUp" data-wow-delay=".1s">
+                <span class="benefit__text">Pomůžeme vám zakoupit veškeré materiály za velkoobchodní ceny u pro prověřených dodavatelů
+                </span>
+                <img class="benefit__image" src="img/benefit1.png" alt="benefit1">
+            </div>
+            <div class="benefit wow animate__animated animate__fadeInUp" data-wow-delay=".3s">
+                <span class="benefit__text">Uděláme Vám <strong>maximální slevu</strong>
+                    u našich partnerů na nákup materiálů                    
+                </span>
+                <img class="benefit__image" src="img/benefit2.png" alt="benefit2">
+            </div>
+            <div class="benefit wow animate__animated animate__fadeInUp" data-wow-delay=".5s">
+                <span class="benefit__text">Vše, co nedokážete najít v obchodech -
+                    pomůžeme objednat <strong> u prověřených dodavatelů</strong>                    
+                </span>
+                <img class="benefit__image" src="img/benefit3.png" alt="benefit3">
+            </div>
+          </div>
+          <div class="documents">
+            <h2 class="section-title documents__title">Všechny naše povinnosti jsou<br>
+                detailně propsané ve smlouvě
+                </h2>
+                <div class="documents-block">
+                    <div class="documents-block__item wow animate__animated animate__backInLeft" data-wow-delay=".5s">
+                        <div class="documents-block__image">
+                            <img src="img/document1.png" alt="doc1">
+                        </div>
+                        <div class="documents-block__text">
+                            Záruka kvality <br>provedené práce 
+                        </div>
+                    </div>
+                    <div class="documents-block__item wow animate__animated animate__backInLeft" data-wow-delay=".3s">
+                        <div class="documents-block__image"><img src="img/document2.png" alt="doc2"></div>
+                        <div class="documents-block__text">Záruka na fixované ceny<br> Druhy práce a jejich ceny<br>  
+                            jsou propsané ve smlouvě                          
+                             </div>
+                         </div>
+                         <div class="documents-block__item wow animate__animated animate__backInLeft" data-wow-delay=".1s">
+                         <div class="documents-block__image"><img src="img/dokument3.png" alt="doc3"></div>
+                         <div class="documents-block__text">Garance na přesné dodržení<br> termínů a zodpovědnosti <br>
+                            za nesplnění                            
+                             </div>                        
+                    </div>
+                </div>
+          </div>
+        </div>
+       </section>
 
 
     </main>
