--- a/src/index.html
+++ b/src/index.html
@@ -314,6 +314,44 @@
           </div>
         </div>
        </section>
+       <section class="brief">
+        <div class="container">
+            <div class="brief-block">
+                <div class="interview brief__interview">
+                    <h3 class="interview__title">Můžeme Vám sdělit přibližnou cenu<br> práce a materiálů po telefonu</h3>
+                    <span class="interview__subtitle">K tomu musíte odpovědět na 4 otázky:</span>
+                    <ul class="interview-list">
+                        <li class="interview-list__item wow animate__animated animate__backInLeft" data-wow-delay=".1s">
+                            <span class="interview-list__counter">1.</span>
+                            <span class="iterview-list__text">Jaká je plocha místnosti?</span>
+                        </li>
+                        <li class="interview-list__item wow animate__animated animate__backInLeft" data-wow-delay=".3s">
+                            <span class="interview-list__counter">2.</span>
+                            <span class="iterview-list__text">Máte novou budovu nebo starší bydlení?</span>
+                        </li>
+                        <li class="interview-list__item wow animate__animated animate__backInLeft" data-wow-delay=".5s">
+                            <span class="interview-list__counter">3.</span>
+                            <span class="iterview-list__text">Kde se nachazí místnost, ve které budou<br>probíhat opravy?</span>
+                        </li>
+                        <li class="interview-list__item wow animate__animated animate__backInLeft" data-wow-delay=".7s">
+                            <span class="interview-list__counter">4.</span>
+                            <span class="iterview-list__text">Účel místnosti?</span>
+                        </li>
+                    </ul>                  
+                </div>
+                <div class="form brief__form wow animate__animated animate__heartBeat">
+                    <h3 class="form__title">Zanechte poptávku na bezplatný<br>výpočet renovace po telefonu </h3> 
+                    <span class="form__subtitle">Vyplňte níže uvedený formulář</span>  
+                    <form action="#" class="form">
+                        <input type="text" class="input brief__input" placeholder="Vaše jméno">
+                        <input type="text" class="input brief__input" placeholder="Váš telefon">
+                        <button class="button brief__button wow animate__animated animate__pulse animate__infinite">Vypočítat náklady</button>
+                        <span class="form__description"> Zavoláme vám nazpět do 60 sekund</span>
+                    </form>               
+                </div>
+            </div>
+        </div>
+       </section>
 
 
     </main>
