--- a/src/index.html
+++ b/src/index.html
@@ -342,9 +342,9 @@
                 <div class="form brief__form wow animate__animated animate__heartBeat">
                     <h3 class="form__title">Zanechte poptávku na bezplatný<br>výpočet renovace po telefonu </h3> 
                     <span class="form__subtitle">Vyplňte níže uvedený formulář</span>  
-                    <form action="#" class="form">
-                        <input type="text" class="input brief__input" placeholder="Vaše jméno">
-                        <input type="text" class="input brief__input" placeholder="Váš telefon">
+                    <form action="#" class="form" id="brief-form">
+                        <input type="text" name="username"  class="input brief__input" placeholder="Vaše jméno">
+                        <input type="text" name="phone" class="input brief__input" placeholder="Váš telefon">
                         <button class="button brief__button wow animate__animated animate__pulse animate__infinite">Vypočítat náklady</button>
                         <span class="form__description"> Zavoláme vám nazpět do 60 sekund</span>
                     </form>               
@@ -354,7 +354,54 @@
        </section>
 
 
-    </main>
+    </main> 
+
+    <footer class="footer">
+        <div class="map" id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2560.0582544447984!2d14.450041615590914!3d50.085196179426696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b949f25df712b%3A0xfeb8d30581d5761a!2zxaB0w610bsOpaG8gMjg1LzI5LCAxMzAgMDAgUHJhaGEgMy3FvWnFvmtvdiwgxIxlc2tv!5e0!3m2!1scs!2sit!4v1675004681511!5m2!1scs!2sit" width="100%" height="640" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>        
+        <div class="container">           
+            <div class="contacts-block">
+                <div class="contacts">
+                    <h3 class="contacts__title">Přijďte nás navštívit!! Poradíme vám se všemi otázkami
+                        ohledně oprav              
+                        </h3>
+                        <ul class="contacts-list">
+                            <li class="contacts-list__item">
+                                <span class="contacts-list__icon">
+                                    <img src="img/i1.png" alt="mapa">
+                                </span>
+                                <span class="contacts-list__text">Praha <br>
+                                    <strong>Štítného 285/29,<br>
+                                        130 00 Praha 3-Žižkov, Czechia</span>
+                                    </strong>
+                            </li>
+                            <li class="contacts-list__item">
+                                <span class="contacts-list__icon">
+                                    <img src="img/i2.png" alt="cas">
+                                </span>
+                                <span class="contacts-list__text">Pracovní doba:<br>
+                                     <strong>od 9:00 do 18:00</strong>
+                                     </span>
+                            </li>
+                            <li class="contacts-list__item">
+                                <span class="contacts-list__icon">
+                                    <img src="img/i3.png" alt="telefon">
+                                </span>
+                                <span class="contacts-list__text">Telefon:<br>
+                                     <strong><a href="tel:+420777167699">+ 420 777 167 699</a>
+                                    </strong>
+                                    </span>
+                            </li>
+                        </ul>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
       <div class="modal" id="modal">
         <div class="modal-dialog">
             <button class="modal-dialog__close" id="close">&times;</button>
@@ -363,7 +410,7 @@
       <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
       <script src="js/slick.min.js"></script>
       <script src="js/wow.min.js"></script>
-
+      <script src="js/jquery.validate.min.js"></script>
       <script src="js/main.js"></script>
 </body>
 </html>
