--- a/src/index.html
+++ b/src/index.html
@@ -357,8 +357,7 @@
     </main> 
 
     <footer class="footer">
-        <div class="map" id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2560.0582544447984!2d14.450041615590914!3d50.085196179426696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b949f25df712b%3A0xfeb8d30581d5761a!2zxaB0w610bsOpaG8gMjg1LzI5LCAxMzAgMDAgUHJhaGEgMy3FvWnFvmtvdiwgxIxlc2tv!5e0!3m2!1scs!2sit!4v1675004681511!5m2!1scs!2sit" width="100%" height="640" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>        
+       
         <div class="container">           
             <div class="contacts-block">
                 <div class="contacts">
@@ -366,7 +365,7 @@
                         ohledně oprav              
                         </h3>
                         <ul class="contacts-list">
-                            <li class="contacts-list__item">
+                            <li class="contacts-list__item wow animate__animated animate__backInRight" data-wow-delay=".1s">
                                 <span class="contacts-list__icon">
                                     <img src="img/i1.png" alt="mapa">
                                 </span>
@@ -375,7 +374,7 @@
                                         130 00 Praha 3-Žižkov, Czechia</span>
                                     </strong>
                             </li>
-                            <li class="contacts-list__item">
+                            <li class="contacts-list__item wow animate__animated animate__backInRight" data-wow-delay=".3s">
                                 <span class="contacts-list__icon">
                                     <img src="img/i2.png" alt="cas">
                                 </span>
@@ -383,7 +382,7 @@
                                      <strong>od 9:00 do 18:00</strong>
                                      </span>
                             </li>
-                            <li class="contacts-list__item">
+                            <li class="contacts-list__item wow animate__animated animate__backInRight" data-wow-delay=".5s">
                                 <span class="contacts-list__icon">
                                     <img src="img/i3.png" alt="telefon">
                                 </span>
@@ -396,6 +395,8 @@
 
                 </div>
             </div>
+            <div class="map wow animate__animated animate__heartBeat" id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2560.0582544447984!2d14.450041615590914!3d50.085196179426696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b949f25df712b%3A0xfeb8d30581d5761a!2zxaB0w610bsOpaG8gMjg1LzI5LCAxMzAgMDAgUHJhaGEgMy3FvWnFvmtvdiwgxIxlc2tv!5e0!3m2!1scs!2sit!4v1675004681511!5m2!1scs!2sit" width="100%" height="640" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>        
         </div>
     </footer>
 
